@startuml
'-----------------------------------
' Diagrama de Classes - Equipe Elon Musk
' Sistema de Monitoria IBMEC
' Elaborado por: Arthur Riess, Pedro Macedo, Felipe Maia e Yago Carvalho
'-----------------------------------

class Aluno {
    +nome: string
    +matricula: string
    +email: string
    +telefone: string
    +CRGeral: float
    +CRDisciplina: float
    +curso: string
    +senha: string
    +cadastrar(): void
    +editarPerfil(): void
}

class Professor {
    +nome: string
    +matricula: string
    +email: string
    +telefone: string
    +senha: string
}

class Direcao {
    +nome: string
    +email: string
    +senha: string
    +visualizarDashboard(): void
}

class Vaga {
    +nome: string
    +identificador: int
    +preRequisitos: string
    +disciplina: string
    +status: string
    +prazoInscricao: date
}

class Candidatura {
    +id: int
    +aluno: Aluno
    +vaga: Vaga
    +documentos: string
    +status: string
    +dataCandidatura: date
    +validarCR(): bool
}

class RegistroMonitoria {
    +id: int
    +aluno: Aluno
    +vaga: Vaga
    +horasTrabalhadas: float
    +dataRegistro: date
    +validadoPor: Professor
}

Aluno --> Candidatura: realiza
Vaga --> Candidatura: recebe
Professor --> Vaga: cadastra
Candidatura --> RegistroMonitoria: gera
Aluno --> RegistroMonitoria: registra horas
Direcao --> RegistroMonitoria: valida relatórios
@enduml
